[package]
name = "home-orbit-lib"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.6", features = ["json", "form", "http1", "http2", "macros", "tokio"] }
axum-server = "0.5"
http-body-util = { version = "0.1", features = ["full"] }
mlua = { version = "0.11.1", features = ["lua54", "vendored"] }
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
tower = { version = "0.4", features = ["full"] }

[[bin]]
name = "home-orbit"
path = "src/main.rs"
